--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Static Server by GitHub
+title: Trung tâm lưu trữ dữ liệu by GitHub
 description: Nguyenlieugiasi.vn
 show_downloads: true
 google_analytics:
